--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,32 +28,33 @@ jobs:
         uses: microsoft/setup-msbuild@v2
 
       - name: Download Build Wrapper
+        id: find_wrapper # Добавили ID для сохранения пути
         run: |
           $url = "https://sonarcloud.io/static/cpp/build-wrapper-win-x86.zip"
           Write-Host "Downloading Build Wrapper from $url"
           Invoke-WebRequest -Uri $url -OutFile build-wrapper.zip
-          # ✅ Гарантированно распаковываем в папку 'bw-temp'
+
+          # Распаковываем в папку 'bw-temp'
           Expand-Archive -Path build-wrapper.zip -DestinationPath bw-temp -Force
 
-      - name: Run Build Wrapper and MSBuild
-        run: |
-          # 1. Находим точное местоположение build-wrapper.exe
+          # Находим точное местоположение и сохраняем его в переменную среды GITHUB ACTIONS
           $wrapperPath = Get-ChildItem -Path bw-temp -Recurse -Filter "build-wrapper.exe" | Select-Object -First 1
           if ($wrapperPath -eq $null) { throw "build-wrapper.exe not found." }
 
-          # 2. Получаем родительскую папку (там, где лежит build-wrapper.exe)
-          $wrapperDir = $wrapperPath.Directory.FullName
-          Write-Host "Wrapper Directory: $wrapperDir"
-
-          # 3. Переходим в папку с Build Wrapper-ом, чтобы избежать ошибок пути
-          Set-Location $wrapperDir
-
-          # 4. Запускаем Build Wrapper, оборачивая msbuild (используем относительный путь к SLN)
-          # ★★★ ОЧЕНЬ ВАЖНО: Проверьте, что имя SLN-файла 'kursach.sln' правильное!
-          & ".\build-wrapper.exe" --out-dir ..\bw-output msbuild ..\kursach.sln /t:Rebuild /p:Configuration=Release /p:Platform=x64
+          # Сохраняем путь для использования в следующем шаге
+          Write-Host "BUILD_WRAPPER_PATH=$($wrapperPath.FullName)" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
           
-          # Возвращаемся в корневой каталог
-          Set-Location $env:GITHUB_WORKSPACE
+      - name: Run Build Wrapper and MSBuild
+        run: |
+          # Используем сохраненный путь напрямую
+          $wrapperPath = "${{ steps.find_wrapper.outputs.BUILD_WRAPPER_PATH }}"
+
+          # Проверка на всякий случай
+          if (-not (Test-Path $wrapperPath)) { throw "Build Wrapper not found at final path: $wrapperPath" }
+
+          # Запускаем Build Wrapper, используя абсолютный путь и оборачивая msbuild
+          # ★★★ ОЧЕНЬ ВАЖНО: Проверьте, что имя SLN-файла 'kursach.sln' правильное!
+          & "$wrapperPath" --out-dir bw-output msbuild kursach.sln /t:Rebuild /p:Configuration=Release /p:Platform=x64
 
       - name: SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v2.2.0
