--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -10,7 +10,6 @@ on:
 jobs:
   sonarcloud:
     name: SonarCloud Scan
-    # ✅ Используем Windows, чтобы собрать проект MSBuild
     runs-on: windows-latest
 
     steps:
@@ -28,65 +27,44 @@ jobs:
       - name: Setup MSBuild (Visual Studio build environment)
         uses: microsoft/setup-msbuild@v2
 
-      # 1. СКАЧИВАНИЕ И УСТАНОВКА ИНСТРУМЕНТОВ ВРУЧНУЮ
+      # 1. СКАЧИВАНИЕ И УСТАНОВКА ИНСТРУМЕНТОВ
       - name: Download Build Wrapper and Sonar Scanner
         id: setup_tools
         run: |
-          # 1. СКАЧИВАНИЕ И УСТАНОВКА BUILD WRAPPER
+          # 1. BUILD WRAPPER: Скачивание, 7z-распаковка и перемещение в bw.exe
           $bw_url = "https://sonarcloud.io/static/cpp/build-wrapper-win-x86.zip"
           Invoke-WebRequest -Uri $bw_url -OutFile build-wrapper.zip
-
-          # Используем 7z
           & "C:\Program Files\7-Zip\7z.exe" x build-wrapper.zip -o"build-wrapper-temp" -y
-
-          # ✅ ФИНАЛЬНОЕ РЕШЕНИЕ: Найти единственный файл и ПЕРЕМЕСТИТЬ его
-          $foundFiles = Get-ChildItem -Path build-wrapper-temp -Recurse -File
-
-          if ($foundFiles.Count -ne 1) {
-              # Если файлов не 1, выводим все для отладки
-              Write-Host "FATAL ERROR: Expected 1 file, found $($foundFiles.Count)"
-              $foundFiles | Select-Object FullName
-              throw "Unexpected number of files in wrapper zip."
-          }
-
-          # Мы нашли ОДИН файл. Теперь мы его ПЕРЕМЕСТИМ в корень и назовем bw.exe
-          $originalPath = $foundFiles[0].FullName
-          $targetPath = "bw.exe"
-
-          Move-Item -Path $originalPath -Destination $targetPath -Force
-
-          # Проверка
-          if (-not (Test-Path $targetPath)) { throw "Move failed." }
-
-          Write-Host "SUCCESS: Build Wrapper is now at $targetPath"
-          Write-Host "BW_PATH=$targetPath" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
           
-          # 2. СКАЧИВАНИЕ И УСТАНОВКА SONAR SCANNER CLI 
+          $foundFiles = Get-ChildItem -Path build-wrapper-temp -Recurse -File
+          if ($foundFiles.Count -ne 1) { throw "Unexpected number of files in wrapper zip." }
+          
+          Move-Item -Path $foundFiles[0].FullName -Destination "bw.exe" -Force
+          if (-not (Test-Path "bw.exe")) { throw "Move failed." }
+          
+          Write-Host "BW_PATH=bw.exe" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+
+          # 2. SONAR SCANNER CLI: Скачивание и 7z-распаковка
           $scanner_url = "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-windows.zip"
           Invoke-WebRequest -Uri $scanner_url -OutFile sonar-scanner.zip
           & "C:\Program Files\7-Zip\7z.exe" x sonar-scanner.zip -o"." -y
           
-          # ✅ НОВЫЙ ПОИСК SONAR SCANNER: Ищем папку, содержащую "sonar-scanner-"
+          # ✅ КОРРЕКТНЫЙ ПОИСК SONAR SCANNER: Ищем папку, содержащую "sonar-scanner-"
           $scannerDir = Get-ChildItem -Path . -Filter "sonar-scanner-*" -Directory | Select-Object -First 1
           
           if ($scannerDir -eq $null) { throw "Sonar Scanner directory not found. Check if the directory name changed." }
-          Write-Host "SUCCESS: Found scanner at $($scannerDir.FullName)"
           Write-Host "SCANNER_PATH=$($scannerDir.FullName)\bin\sonar-scanner.bat" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-      
+
       # 2. ШАГ СБОРКИ: Запуск Build Wrapper и MSBuild
       - name: Run Build Wrapper and MSBuild
         run: |
-          # ВАЖНО: Мы берем путь BW_PATH, который был сохранен как 'bw.exe' в предыдущем шаге
+          # ПУТЬ БЕРЕТСЯ ИЗ ПРЕДЫДУЩЕГО ШАГА!
           $bwPath = "${{ steps.setup_tools.outputs.BW_PATH }}"
           
-          # Проверка на всякий случай
-          if (-not (Test-Path $bwPath)) { throw "Build Wrapper not found at final path: $bwPath" }
-
           # Запускаем Build Wrapper для отслеживания MSBuild
-          # $bwPath теперь равен "bw.exe"
           & "$bwPath" --out-dir bw-output msbuild kursach.sln /t:Rebuild /p:Configuration=Release /p:Platform=x64
-
-      # 3. ШАГ ОТПРАВКИ: Запуск анализа
+          
+      # 3. ШАГ ОТПРАВКИ: Запуск анализа Sonar Scanner
       - name: SonarScanner Analysis
         run: |
           $scannerPath = "${{ steps.setup_tools.outputs.SCANNER_PATH }}"
